<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.example</groupId>
  <artifactId>design-patterns-warehouse-demo</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
  </properties>

  <dependencies>
    <!-- INFO: Spark used to provide the web interface. -->
    <dependency>
      <groupId>com.sparkjava</groupId>
      <artifactId>spark-core</artifactId>
      <version>2.7.2</version>
    </dependency>
    <!-- INFO: Spark's Velocity dependency is used to create dynamic HTML templates. -->
    <dependency>
      <groupId>com.sparkjava</groupId>
      <artifactId>spark-template-velocity</artifactId>
      <version>2.7.1</version>
    </dependency>
    <!-- INFO: used to store data in an in-memory database as an alternative to storing data in Java objects. -->
    <dependency>
      <groupId>com.h2database</groupId>
      <artifactId>h2</artifactId>
      <version>1.4.199</version>
      <scope>runtime</scope>
    </dependency>
    <!-- INFO: SLF4J's simple implementation is used to configure Spark's logging. -->
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-simple</artifactId>
      <version>1.7.26</version>
      <scope>runtime</scope>
    </dependency>
  </dependencies>
</project>